tests/type-reconstruction/ill-typed/records/records-7.stella
language core;

extend with #records, #type-reconstruction;

fn mk(k : fn(auto) -> auto) -> { x : auto, y : auto } {
  return
    { x = { x = fn(x : auto) {
                  return if k(succ(0))
                    then if x then 0 else succ(0)
                    else succ(succ(0))
                }
          , y = succ(0) }
    , y = { x = fn(x : auto) {
                  return if k(succ(0))
                    then if x then 0 else succ(0)
                    else succ(succ(0))
                }
          , y = succ(0) } }.x.x
}

fn main(x : auto) -> auto {
  return mk;
}